--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -127,6 +127,7 @@ flutter:
     - assets/images/social_media_icons/logo.svg
     - assets/images/social_media_icons/telegram.svg
     - assets/images/social_media_icons/twitter.svg
+    - assets/images/social_media_icons/linkedin.svg
     - assets/images/Adv_slider.svg
     - assets/images/almanac_lists/1.svg
     - assets/images/almanac_lists/3.svg
