--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.31.0
+  firebase_storage: ^10.2.10
+  firebase_core: ^10.2.10
   firebase_database: ^10.5.5
   flutter_svg: ^2.0.10
   carousel_slider: ^4.2.1
