--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -159,48 +159,48 @@ flutter:
     - assets/images/business_lists/sample/6.svg
     - assets/images/business_lists/sample/mengesha.svg
     - assets/images/business_lists/sample/tomoca.svg
-    # - assets/images/business_lists/adv_logo/1.jpg
-    # - assets/images/business_lists/adv_logo/2.jpg
-    # - assets/images/business_lists/adv_logo/3.jpg
-    # - assets/images/business_lists/adv_logo/4.jpg
-    # - assets/images/business_lists/adv_logo/5.jpg
-    # - assets/images/business_lists/adv_logo/7.jpg
-    # - assets/images/business_lists/adv_logo/8.jpg
-    # - assets/images/business_lists/adv_logo/9.jpg
-    # - assets/images/business_lists/adv_logo/10.jpg
-    # - assets/images/business_lists/adv_logo/11.jpg
-    # - assets/images/business_lists/adv_logo/12.jpg
-    # - assets/images/business_lists/adv_logo/13.jpg
-    # - assets/images/business_lists/adv_logo/14.jpg
-    # - assets/images/business_lists/adv_logo/15.jpg
-    # - assets/images/business_lists/adv_logo/16.jpg
-    # - assets/images/business_lists/adv_logo/17.jpg
-    # - assets/images/business_lists/adv_logo/18.jpg
-    # - assets/images/business_lists/adv_logo/19.jpg
-    # - assets/images/business_lists/adv_logo/20.jpg
-    # - assets/images/business_lists/adv_logo/21.jpg
-    # - assets/images/business_lists/adv_logo/22.jpg
-    # - assets/images/business_lists/adv_logo/23.jpg
-    # - assets/images/business_lists/adv_logo/24.jpg
-    # - assets/images/business_lists/adv_logo/25.jpg
-    # - assets/images/business_lists/adv_logo/26.jpg
-    # - assets/images/business_lists/adv_logo/27.jpg
-    # - assets/images/business_lists/adv_logo/28.jpg
-    # - assets/images/business_lists/adv_logo/29.jpg
-    # - assets/images/business_lists/adv_logo/30.jpg
-    # - assets/images/business_lists/adv_logo/31.jpg
-    # - assets/images/business_lists/adv_logo/32.jpg
-    # - assets/images/business_lists/adv_logo/33.jpg
-    # - assets/images/business_lists/adv_logo/34.jpg
-    # - assets/images/business_lists/adv_logo/35.jpg
-    # - assets/images/business_lists/adv_logo/36.jpg
-    # - assets/images/business_lists/adv_logo/37.jpg
-    # - assets/images/business_lists/adv_logo/38.jpg
-    # - assets/images/business_lists/adv_logo/39.jpg
-    # - assets/images/business_lists/adv_logo/40.jpg
-    # - assets/images/business_lists/adv_logo/41.jpg
-    # - assets/images/business_lists/adv_logo/42.jpg
-    # - assets/images/business_lists/adv_logo/43.jpg
+    - assets/images/business_lists/adv_logo/1.jpg
+    - assets/images/business_lists/adv_logo/2.jpg
+    - assets/images/business_lists/adv_logo/3.jpg
+    - assets/images/business_lists/adv_logo/4.jpg
+    - assets/images/business_lists/adv_logo/5.jpg
+    - assets/images/business_lists/adv_logo/7.jpg
+    - assets/images/business_lists/adv_logo/8.jpg
+    - assets/images/business_lists/adv_logo/9.jpg
+    - assets/images/business_lists/adv_logo/10.jpg
+    - assets/images/business_lists/adv_logo/11.jpg
+    - assets/images/business_lists/adv_logo/12.jpg
+    - assets/images/business_lists/adv_logo/13.jpg
+    - assets/images/business_lists/adv_logo/14.jpg
+    - assets/images/business_lists/adv_logo/15.jpg
+    - assets/images/business_lists/adv_logo/16.jpg
+    - assets/images/business_lists/adv_logo/17.jpg
+    - assets/images/business_lists/adv_logo/18.jpg
+    - assets/images/business_lists/adv_logo/19.jpg
+    - assets/images/business_lists/adv_logo/20.jpg
+    - assets/images/business_lists/adv_logo/21.jpg
+    - assets/images/business_lists/adv_logo/22.jpg
+    - assets/images/business_lists/adv_logo/23.jpg
+    - assets/images/business_lists/adv_logo/24.jpg
+    - assets/images/business_lists/adv_logo/25.jpg
+    - assets/images/business_lists/adv_logo/26.jpg
+    - assets/images/business_lists/adv_logo/27.jpg
+    - assets/images/business_lists/adv_logo/28.jpg
+    - assets/images/business_lists/adv_logo/29.jpg
+    - assets/images/business_lists/adv_logo/30.jpg
+    - assets/images/business_lists/adv_logo/31.jpg
+    - assets/images/business_lists/adv_logo/32.jpg
+    - assets/images/business_lists/adv_logo/33.jpg
+    - assets/images/business_lists/adv_logo/34.jpg
+    - assets/images/business_lists/adv_logo/35.jpg
+    - assets/images/business_lists/adv_logo/36.jpg
+    - assets/images/business_lists/adv_logo/37.jpg
+    - assets/images/business_lists/adv_logo/38.jpg
+    - assets/images/business_lists/adv_logo/39.jpg
+    - assets/images/business_lists/adv_logo/40.jpg
+    - assets/images/business_lists/adv_logo/41.jpg
+    - assets/images/business_lists/adv_logo/42.jpg
+    - assets/images/business_lists/adv_logo/43.jpg
     - assets/images/almanac_lists/bank_logos/1.png
     - assets/images/almanac_lists/bank_logos/2.png
     - assets/images/almanac_lists/bank_logos/3.png
