--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -310,6 +310,8 @@ flutter:
     - assets/video/business/35.mp4
     - assets/video/business/36.mp4
     - assets/video/business/37.mp4
+    - assets/sg.jpg
+    - assets/president.jpg
     
     
 
